@@ -7745,6 +7745,7 @@ static void mc_pre_clo_init(void)
                                    MC_(print_extra_suppression_use),
                                    MC_(update_extra_suppression_use));
    VG_(needs_libc_freeres)        ();
+   VG_(needs_cxx_freeres)         ();
    VG_(needs_command_line_options)(mc_process_cmd_line_options,
                                    mc_print_usage,
                                    mc_print_debug_usage);
